# ClientServer

./: CMakeLists.txt  token
Headers/: Client.h  TimerFunction.h
ServerApp/: CMakeLists.txt  config.txt
ServerApp/Headers/: Logger.h  Server.h
ServerApp/Src/: Logger.cpp  Server.cpp  ServerTest.cpp
Src/: Client.cpp  ClientTest.cpp  TimerFunction.cpp
